test/good/classes/inheritance05.px

class A def
    String s: "A"

    constructor def
        print this.s

class B(A) def
    Int x

B("B")
B(s="B")
B()
